<resources>
    <string name="app_name">Easy Calc</string>
    <string name="_0">0</string>
    <string name="enter_2nd_number">Enter 2nd Number</string>
    <string name="enter_1st_number">Enter 1st Number</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="c">C</string>
    <string name="x">x</string>
    <string name="div">/</string>
    <string name="exit">EXIT</string>
</resources>
